Replaced searching client by name to searching client by email
